compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__constants_in_guards-2.snap
---
source: compiler-core/src/erlang/tests/guards.rs
assertion_line: 333
expression: "\npub const list = [1, 2, 3]\n\npub fn main(arg) {\n  case arg {\n    _ if arg == list -> 1\n    _ -> 0\n  }\n}\n"
---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main(list(integer())) -> integer().
main(Arg) ->
    case Arg of
        _@1 when Arg =:= [1, 2, 3] ->
            1;

        _@2 ->
            0
    end.

