compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__constants_in_guards.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub const string_value = \"constant value\"\npub const float_value = 3.14\npub const int_value = 42\npub const tuple_value = #(1, 2.0, \"3\")\npub const list_value = [1, 2, 3]\n\npub fn main(arg) {\n  let _ = list_value\n  case arg {\n    #(w, x, y, z) if w == tuple_value && x == string_value && y >. float_value && z == int_value -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub const string_value = "constant value"
pub const float_value = 3.14
pub const int_value = 42
pub const tuple_value = #(1, 2.0, "3")
pub const list_value = [1, 2, 3]

pub fn main(arg) {
  let _ = list_value
  case arg {
    #(w, x, y, z) if w == tuple_value && x == string_value && y >. float_value && z == int_value -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1, int_value/0, float_value/0, string_value/0, tuple_value/0, list_value/0]).

-spec int_value() -> integer().
int_value() ->
    42.

-spec float_value() -> float().
float_value() ->
    3.14.

-spec string_value() -> binary().
string_value() ->
    ~"constant value".

-spec tuple_value() -> {integer(), float(), binary()}.
tuple_value() ->
    {1, 2.0, ~"3"}.

-spec list_value() -> list(integer()).
list_value() ->
    [1, 2, 3].

-spec main({{integer(), float(), binary()}, binary(), float(), integer()}) -> integer().
main(Arg) ->
    _ = [1, 2, 3],
    case Arg of
        {W, X, Y, Z} when (((W =:= {1, 2.0, ~"3"}) andalso (X =:= ~"constant value")) andalso (Y > 3.14)) andalso (Z =:= 42) ->
            1;

        _ ->
            0
    end.
